latest resume and image, fixed download button position on mobile

--- a/mainSite/static/mainSite/style.css
+++ b/mainSite/static/mainSite/style.css
@@ -741,6 +741,12 @@ footer {
         margin: 0%;
     }
 
+    .ResumeDownload {
+        position: unset;
+        margin-top: unset;
+        margin-left: unset;
+    }
+
     .ResumeDownload button {
         width: auto;
         margin: 2%;
